syntax = "proto3";

package nbft;

message Request {
	int64 time = 1;
    bytes transaction = 2;
	string fromChain = 3;
	string toChain = 4;
}

message PrePrepare {
	string replicaID = 1;
	string name = 2;
	string chain = 3;
	uint64  quorum = 4;    
	string digest = 5;
	repeated string chains = 6;
    repeated Request requests = 7;
}

message Prepare {	
    string replicaID = 1;
	string name = 2;
	string chain = 3;
	uint64  quorum = 4;    
	string digest = 5;
}

message Commit {
    string replicaID = 1;
	string name = 2;
	string chain = 3;
	uint64  quorum = 4;    
	string digest = 5;
}

message Committed {
	string key = 1;
    repeated Request requests = 2;
}

message FetchCommitted {
	string replicaID = 1;
	string key = 2;
}

message ReturnCommitted {
	string replicaID = 1;
	Committed committed = 2;
}

message NbftMessage {
	oneof payload {		
		Request request=1;
		PrePrepare preprepare = 2;
		Prepare prepare = 3;
		Commit commit = 4;
		Committed committed = 5;
		FetchCommitted fetchCommitted = 6;
		ReturnCommitted returnCommitted = 7;
	}
}